--- a/KuhleKuh/app/src/main/AndroidManifest.xml
+++ b/KuhleKuh/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AddKuhActivity"></activity>
+        <activity android:name=".AddEditKuhActivity"></activity>
         <activity
             android:launchMode="singleTop"
             android:name=".MainActivity"
